--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-# From original Dockerfile at https://github.com/TheCommsChannel/TC2-BBS-mesh
+# From original Dockerfile at https://github.com/ricardodantas/meshtastic-bbs
 FROM debian:stable-slim AS build
 
 RUN apt-get update && \
@@ -7,7 +7,7 @@ RUN apt-get update && \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Clone the repository
-RUN git clone https://github.com/TheCommsChannel/TC2-BBS-mesh.git
+RUN git clone https://github.com/ricardodantas/meshtastic-bbs.git
 
 ####
 
@@ -20,17 +20,17 @@ RUN mkdir -p /home/mesh/bbs
 WORKDIR /home/mesh/bbs
 
 # Install Python dependencies
-COPY --from=build /TC2-BBS-mesh/requirements.txt ./
+COPY --from=build /meshtastic-bbs/requirements.txt ./
 RUN pip install --no-cache-dir --break-system-packages -r requirements.txt
 
 # Copy over app code
-COPY --from=build /TC2-BBS-mesh/*.py ./
+COPY --from=build /meshtastic-bbs/*.py ./
 
 # Define config volume
 VOLUME /home/mesh/bbs/config
 WORKDIR /home/mesh/bbs/config
-COPY --from=build /TC2-BBS-mesh/example_config.ini ./config.ini
-COPY --from=build /TC2-BBS-mesh/fortunes.txt ./
+COPY --from=build /meshtastic-bbs/example_config.ini ./config.ini
+COPY --from=build /meshtastic-bbs/fortunes.txt ./
 
 # Define the command to run
 ENTRYPOINT [ "python3", "/home/mesh/bbs/server.py" ]
