--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ meshtastic = "^2.5.5"
 pyfiglet = "^1.0.2"
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.3.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
