--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyfiglet = "^1.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.3"
+black = "^24.10.0"
 
 [build-system]
 requires = ["poetry-core"]
