--- a/meshtastic-bbs.service
+++ b/meshtastic-bbs.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=TC²-BBS Meshtastic Version
+Description=Meshtastic BBS service
 After=multi-user.target
 
 [Service]
@@ -7,8 +7,8 @@ Type=simple
 Restart=always
 RestartSec=20
 User=pi
-WorkingDirectory=/home/pi/Meshtastic-BBS
-ExecStart=/home/pi/Meshtastic-BBS/venv/bin/python3 /home/pi/Meshtastic-BBS/server.py
+WorkingDirectory=/home/pi/meshtastic-bbs
+ExecStart=./scripts/start.sh
 
 [Install]
 WantedBy=multi-user.target
