update setup and config files

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,3 +1,6 @@
+[service]
+name = "Meshtastic BBS"
+
 ###############################
 #### Select Interface type ####
 ###############################
