--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "meshtastic-bbs"
-version = "1.0.0"
+version = "1.0.0-beta"
 description = "This is a BBS system integrated with Meshtastic network. The system allows for message handling, bulletin boards, mail systems, and a channel directory."
 authors = ["ricardodantas"]
 license = "GPL-3.0"
