--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,17 +7,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.12"]
     steps:
+
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install Poetry
+      uses: abatilo/actions-poetry@v3
+      with:
+        poetry-version: 1.8.5
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        poetry install
+
+    - name: Lint
       run: |
-        pylint $(git ls-files '*.py')
+        poetry run pylint --rcfile .pylintrc $(git ls-files '*.py')
