--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "tc2-bbs-mesh"
-version = "0.1.0"
-description = "This is the TC²-BBS system integrated with Meshtastic devices. The system allows for message handling, bulletin boards, mail systems, and a channel directory."
-authors = ["TheCommsChannel"]
+name = "meshtastic-bbs"
+version = "1.0.0-beta"
+description = "This is a BBS system integrated with Meshtastic network. The system allows for message handling, bulletin boards, mail systems, and a channel directory."
+authors = ["ricardodantas"]
 license = "GPL-3.0"
 readme = "README.md"
 package-mode = false
@@ -13,6 +13,10 @@ pypubsub = "^4.0.3"
 meshtastic = "^2.5.5"
 pyfiglet = "^1.0.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.3.3"
+black = "^24.10.0"
 
 [build-system]
 requires = ["poetry-core"]
