Fix ExecStart command in service file to use bash explicitly

--- a/meshtastic-bbs.service
+++ b/meshtastic-bbs.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=20
 User=pi
 WorkingDirectory=/home/pi/meshtastic-bbs
-ExecStart=./scripts/start.sh
+ExecStart=bash /scripts/start.sh
 
 [Install]
 WantedBy=multi-user.target
