Change service user from 'pi' to 'root' in meshtastic-bbs.service

--- a/meshtastic-bbs.service
+++ b/meshtastic-bbs.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=simple
 Restart=always
 RestartSec=20
-User=pi
+User=root
 WorkingDirectory=/home/pi/meshtastic-bbs
 ExecStart=bash /scripts/start.sh
 
