--- a/meshtastic-bbs.service
+++ b/meshtastic-bbs.service
@@ -8,7 +8,7 @@ Restart=always
 RestartSec=20
 User=root
 WorkingDirectory=/home/pi/meshtastic-bbs
-ExecStart=bash /scripts/start.sh
+ExecStart=bash scripts/start.sh
 
 [Install]
 WantedBy=multi-user.target
